<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Genre extends Model
{
    protected $guarded = [];

    // tied to books
    public function books()
    {
        return $this->belongsToMany(Book::class);
    }
}